--- a/main.tex
+++ b/main.tex
@@ -15,13 +15,13 @@
 
 \thispagestyle{empty}
 \begin{tikzpicture}[remember picture, overlay]
-  \node[anchor=south east, inner sep=8mm] at (current page.south east) {%
+  \node[anchor=south east, inner sep=10mm, yshift=2cm] at (current page.south east) {%
     \reflectbox{\includegraphics[height=0.3\paperheight]{images/toucan_bw.png}}%
   };
-  \node[anchor=south west, inner sep=10mm] at (current page.south west)
+  \node[anchor=south west, inner sep=20mm] at (current page.south west)
     {\large\sffamily Version 0.1 ``\textit{Audacious Hatchling}''};
     % {\large\sffamily Version 1.0 ``\textit{Tropical Toucan}''};
-  \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\today};
+  \node[anchor=south east, inner sep=20mm] at (current page.south east) {\large\sffamily\today};
   \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data Science Project}};
   \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{An Inductive Learning Approach}};
   \node[anchor=north, inner sep=5mm] at (subtitle.south) {\Large\sffamily\uppercase{Filipe A. N. Verri}};
@@ -36,14 +36,16 @@
 
 \thispagestyle{empty}
 \begin{tikzpicture}[remember picture, overlay]
-  \node[anchor=center] (logo) at (current page.center) {%
-    \includegraphics[height=0.3\paperheight]{images/zippi_bw.pdf}%
+  \node[anchor=center] (subtitle) at (current page.center) {\large\sffamily\href{https://zippi.com.br/}{zippi.com.br}};
+  \node[anchor=south] (logo) at (subtitle.north) {%
+    \includegraphics[width=0.5\paperwidth]{images/zippi_bw.pdf}%
   };
   \node[anchor=south] (title) at (logo.north) {\large\sffamily This physical copy is offered to you by};
-  \node[anchor=north] (subtitle) at (logo.south) {\large\sffamily\href{https://zippi.com.br/}{zippi.com.br}};
+  \node[anchor=north] (qr) at (subtitle.south) {\qrcode[height=3cm]{https://zippi.com.br/}};
 \end{tikzpicture}
 
 \newpage
+\emergencystretch=1em % XXX: lazy fix for overfull hbox
 
 {
   \footnotesize\noindent Cite this book as:
@@ -132,8 +134,6 @@ visit
 
 \input{backmatter/mathematical-foundations}
 \input{backmatter/learning-machines}
-
-\backmatter
 
 \printglossary
 
