--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \usepackage{fontawesome5}
 \usepackage{nicefrac}
 \usepackage{cancel}
+\usepackage[ruled]{algorithm2e}
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
@@ -98,6 +99,9 @@ Restricted use only.  All rights reserved.
 \input{inductive}
 \input{preprocess}
 \input{planning}
+
+\appendix
+\input{preliminaries}
 
 \backmatter
 \emergencystretch=1em
