Added zippi publi.

--- a/cover.tex
+++ b/cover.tex
@@ -78,10 +78,10 @@
     \node at (photo) {\includegraphics[width=4cm]{images/verri.jpg}};
   \end{scope}
 
-  \draw[dashed, black] (0.25, 0.25) rectangle (14.25, 21.25);
-  \draw[dashed, black] (14.25, 0.25) rectangle (14.95, 21.25);
-  \draw[dashed, black] (14.95, 0.25) rectangle (16.28, 21.25);
-  \draw[dashed, black] (16.28, 0.25) rectangle (16.98, 21.25);
-  \draw[dashed, black] (16.98, 0.25) rectangle (30.98, 21.25);
+  % \draw[dashed, black] (0.25, 0.25) rectangle (14.25, 21.25);
+  % \draw[dashed, black] (14.25, 0.25) rectangle (14.95, 21.25);
+  % \draw[dashed, black] (14.95, 0.25) rectangle (16.28, 21.25);
+  % \draw[dashed, black] (16.28, 0.25) rectangle (16.98, 21.25);
+  % \draw[dashed, black] (16.98, 0.25) rectangle (30.98, 21.25);
 \end{tikzpicture}
 \end{document}
