Small comments on projects.

--- a/project.tex
+++ b/project.tex
@@ -452,12 +452,16 @@ needed to ensure that the project is completed on time and within budget.
 
 \section{Our approach}
 \label{sec:our-approach}
+% TODO: talk about nowadays clients expect the final product, not only the model
+% TODO: talk about unrealistic separation between preparation, modeling and evaluation,
+% specially when considering machine learning
 
 The previously mentioned methodologies lack focus on the software development aspects of
 the data science project.  For instance, CRISP-DM defines the stages only of the data
 mining process, i.e., it does not explicitly address user interface or data collection.
 \citeauthor{Zumel2019}'s approach addresses data collection and presentation of results, but
-delegates software development to the operations role, barely mentioning it.  Scrum is
+delegates software development\footnote{Although, they do address it in a prototyping level, but
+not in a production level.} to the operations role, barely mentioning it.  Scrum is
 a good framework for software development, but it is not designed for data science
 projects.  For instance, it lacks the exploratory phases of data science projects.
 
