--- a/courses.tex
+++ b/courses.tex
@@ -7,7 +7,7 @@ Any questions about the classes should be sent via Google Classroom.  If your qu
 general interest, please use the main stream.  If your query is personal and related to
 a specific assignment or grade, please use the private stream.
 
-You can contact me via email at \href{mailto:verri@ita.br}{verri@ita.br} or
+You can contact me via email at
 \href{mailto:filipe.verri@gp.ita.br}{filipe.verri@gp.ita.br}.
 
 \newpage
@@ -25,7 +25,7 @@ Prof. Filipe A. N. Verri
 \paragraph{Course load:} 3--0--0--4
 
 \paragraph{Requirements:} Advanced programming skills, a strong statistical background, and
-beginner-level machine learning skills.
+machine learning skills.
 
 \paragraph{Course program:}
 Brief history of data science.  Fundamental data concepts.  Methodologies for data science
@@ -54,7 +54,7 @@ Final grades will be calculated as
   \sqrt{\frac{T_1 + T_2 + T_3}{3} \cdot L}
 \end{equation*}
 
-\paragraph{Case study:} At most 6 groups will be formed.  Each group will be responsible for
+\paragraph{Case study:} Ideally, 3 groups will be formed.  Each group will be responsible for
 a case study.  Students must choose a real-world problem and develop a data science
 project, including data collection, data handling, inductive learning, validation,
 documentation, and deployment. The results must be presented in a 30-minute presentation.
@@ -66,7 +66,8 @@ application, a mobile application, or a web service.
 \begin{itemize}
   \itemsep 0pt
   \item Filipe A. N. Verri (2025).  \emph{Data Science Project: An Inductive Learning
-    Approach}.  Victoria, British Columbia, Canada: Leanpub.
+    Approach}.  Victoria, British Columbia, Canada: Leanpub.  Available at
+    \href{https://leanpub.com/dsp}{https://leanpub.com/dsp}.
   \item \fullcite{Zumel2019}.
   \item \fullcite{Wickham2023}.
 \end{itemize}
@@ -85,21 +86,19 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    \multirow{2}{*}{1} & Mathematical foundations review \\
-      & Brief history of data science \\
+    \multirow{2}{*}{1} & Chapter 1: A brief history of data science \\
+      & Review: Mathematical foundations \\
     \midrule
     \multirow{2}{*}{2} & \bfseries Written test (60 min) \\
-      & Brief history of data science \\
+      & Chapter 2: Fundamental concepts \\
     \midrule
-    3 & Fundamental data concepts \\
+    3 & Chapter 3: Data science project \\
     \midrule
-    4 & Methodologies for data science projects \\
+    4 & \multirow{2}{*}{Chapter 4: Structured data} \\
+    5 &  \\
     \midrule
-    5 & Structured data, database normalization, and tidy data \\
-    \midrule
-    6 & Data handling operators and their properties \\
-    \midrule
-    7 & Learning from data and principles of statistical learning theory \\
+    6 & \multirow{2}{*}{Chapter 5: Data handling} \\
+    7 & \\
     \midrule
     \multirow{2}{*}{8} & \bfseries Written test (60 min) \\
       & Project discussions \\
@@ -114,26 +113,27 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    1 & Learning from data and principles of statistical learning theory \\
+    1 & Chapter 6: Learning from data \\
     \midrule
-    2 & Data preprocessing tasks \\
+    2 & Chapter 7: Data preprocessing \\
     \midrule
-    3 & Evaluation and validation of data science products \\
+    3 & Chapter 8: Solution validation \\
     \midrule
-    \multirow{2}{*}{4} & \bfseries Written test (60 min) \\
+    4 & Project discussions \\
+    \midrule
+    \multirow{2}{*}{5} & \bfseries Written test (60 min) \\
       & Project discussions \\
     \midrule
-    5 & \multirow{2}{*}{Project discussions} \\
-    6 &  \\
+    6 & \multirow{2}{*}{Project discussions} \\
+    7 &  \\
     \midrule
-    7 & \multirow{2}{*}{\bfseries Presentations} \\
-    8 & \\
+    8 & \bfseries Presentations \\
     \bottomrule
   \end{tabular}
 \end{center}
 
-Case studies will be presented during exam weeks.  At most, 3 case studies will be
-presented per day, with 30 minutes for each presentation and 20 minutes for questions.
+At most, 3 case studies will be presented per day, with 30 minutes for each presentation
+and 20 minutes for questions.
 
 \thispagestyle{empty}
 
