--- a/main.tex
+++ b/main.tex
@@ -341,14 +341,14 @@ visit
 \input{about}
 
 \mainmatter
-\input{history}
-\input{data}
-\input{project}
-\input{structured}
-\input{handling}
-\input{inductive}
-\input{preprocess}
-\input{planning}
+\input{chapters/history}
+\input{chapters/fundamental}
+\input{chapters/project}
+\input{chapters/structured-data}
+\input{chapters/data-handling}
+\input{chapters/learning}
+\input{chapters/preprocessing}
+\input{chapters/validation}
 
 \renewcommand{\theHchapter}{A\arabic{chapter}} % workaround for hyperref
 \appendix
