--- a/main.tex
+++ b/main.tex
@@ -122,8 +122,7 @@ visit
 \input{backmatter/mathematical-foundations}
 \input{backmatter/learning-machines}
 
-\printglossary[type=\acronymtype,title=Acronyms,toctitle=Acronyms]
-\printglossary[title=Glossary,toctitle=Glossary]
+\printglossary
 
 \printbibliography[heading=bibintoc]
 
