Fixed appendix numbering and references.

--- a/backmatter/mathematical-foundations.tex
+++ b/backmatter/mathematical-foundations.tex
@@ -1,5 +1,5 @@
 \chapter{Mathematical foundations}
-\label{chap:preliminaries}
+\label[appendix]{chap:preliminaries}
 \glsresetall
 
 \chapterprecishere{%
