--- a/cover.tex
+++ b/cover.tex
@@ -63,9 +63,9 @@
     projects.
   };
 
-  \node[anchor=center] (sponsor) at (7.25, 2.5) {\includegraphics[height=1.5cm]{images/zippi.pdf}};
-  \node[anchor=south] at (sponsor.north) {\sffamily This physical copy is offered to you by};
-  \node[anchor=north] at (sponsor.south) {\sffamily zippi.com.br};
+  % \node[anchor=center] (sponsor) at (7.25, 2.5) {\includegraphics[height=1.5cm]{images/zippi.pdf}};
+  % \node[anchor=south] at (sponsor.north) {\sffamily This physical copy is offered to you by};
+  % \node[anchor=north] at (sponsor.south) {\sffamily zippi.com.br};
 
   \node[anchor=center, rotate=270] at (image.center) {%
     \large\sffamily\uppercase{Data Science Project: An Inductive Learning Approach}};
