--- a/main.tex
+++ b/main.tex
@@ -34,9 +34,9 @@
 \phantom{foo}
 \clearpage
 
-\includepdf[pages=-]{images/zippi_page.pdf}
+% \includepdf[pages=-]{images/zippi_page.pdf}
 
-\newpage
+% \newpage
 \emergencystretch=1em % XXX: lazy fix for overfull hbox
 
 {
