Talk about LLMs a little bit.

--- a/glossary.tex
+++ b/glossary.tex
@@ -24,6 +24,7 @@
 \newabbreviation{iqr}{IQR}{interquartile range}
 \newabbreviation{cnn}{CNN}{convolutional neural network}
 \newabbreviation{pca}{PCA}{principal component analysis}
+\newabbreviation{llm}{LLM}{large language model}
 
 \newglossaryentry{ontology}{%
   name=ontology,
