--- a/references.bib
+++ b/references.bib
@@ -670,3 +670,23 @@ author = {Freek Stulp and Olivier Sigaud},
   publisher = {Taylor \& Francis},
   doi = {10.1057/jors.2014.103}
 }
+
+@article{Vaswani2017,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@online{Zhao2025,
+  title =        {Is Chain-of-Thought Reasoning of LLMs a Mirage? A Data Distribution Lens},
+  author =       {Zhao, Chengshuai and Tan, Zhen and Ma, Pingchuan and Li, Dawei and Jiang, Bohan and Wang, Yancheng and Yang, Yingzhen and Liu, Huan},
+  eprintclass =  {arXiv},
+  eprint =       {2508.01191},
+  eprinttype =   {cs.AI},
+  date =         {2025-08-13},
+  version =      {3},
+  url =          {https://arxiv.org/abs/2508.01191v3},
+  doi =          {10.48550/arXiv.2508.01191}
+}
