Update CLAUDE.md and created some directives about slides.
- So claude code can help me create the slides based on the contents of
  the book.

--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,7 @@ original and created with Ti\textit{k}Z.  Proudly written in
 \href{https://neovim.io/}{Neovim}.  \LaTeX{} code written with the assistance of
 \href{https://github.com/features/copilot}{GitHub Copilot} and
 \href{https://www.anthropic.com/claude-code}{Claude Code}.
-All the text is original and not AI-generated.
+All the intellectual content of the book is written by the author and is not AI-generated.
 The book cover image was created with the assistance of
 \href{https://gemini.google.com}{Gemini} and \href{https://openai.com/dall-e-2}{DALL·E 2}.
 We use the beautiful \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
