Added motto and CEDS name fix.

--- a/frontmatter/preface.tex
+++ b/frontmatter/preface.tex
@@ -7,7 +7,7 @@ I teach to graduate students at both the Aeronautics Institute of Technology (IT
 Federal University of São Paulo (UNIFESP) in Brazil.  I have been teaching this subject
 since 2021, and I have continually updated the material each year.
 
-Also, I was the coordinator of the Data Science Specialization Program (CEDS) at ITA.
+Also, I was the coordinator of the Data Science Specialization Course (CEDS) at ITA.
 That experience, which included a great deal of administrative work, as well as teaching and
 supervising professionals in the course, has helped me to understand the needs of the
 market and the students.
