--- a/main.tex
+++ b/main.tex
@@ -92,6 +92,15 @@ visit
 
 \cleardoublepage
 
+\thispagestyle{empty}
+\vspace*{\fill}
+\begin{center}
+  \textit{Ordo Commoditatem Superat}
+\end{center}
+\vfill
+
+\cleardoublepage
+
 \input{frontmatter/foreword}
 
 \cleardoublepage
