--- a/references.bib
+++ b/references.bib
@@ -679,6 +679,14 @@ author = {Freek Stulp and Olivier Sigaud},
   year={2017}
 }
 
+@Manual{Wickham2022NYC,
+  title = {nycflights13: Flights that Departed NYC in 2013},
+  author = {Hadley Wickham},
+  year = {2022},
+  note = {R package version 1.0.2},
+  url = {https://github.com/hadley/nycflights13},
+}
+
 @online{Zhao2025,
   title =        {Is Chain-of-Thought Reasoning of LLMs a Mirage? A Data Distribution Lens},
   author =       {Zhao, Chengshuai and Tan, Zhen and Ma, Pingchuan and Li, Dawei and Jiang, Bohan and Wang, Yancheng and Yang, Yingzhen and Liu, Huan},
