--- a/references.bib
+++ b/references.bib
@@ -698,3 +698,44 @@ author = {Freek Stulp and Olivier Sigaud},
   url =          {https://arxiv.org/abs/2508.01191v3},
   doi =          {10.48550/arXiv.2508.01191}
 }
+
+@inproceedings{hutchison2017laradb,
+author = {Hutchison, Dylan and Howe, Bill and Suciu, Dan},
+title = {LaraDB: A Minimalist Kernel for Linear and Relational Algebra Computation},
+year = {2017},
+isbn = {9781450350198},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+doi = {10.1145/3070607.3070608},
+booktitle = {Proceedings of the 4th ACM SIGMOD Workshop on Algorithms and Systems for MapReduce and Beyond},
+articleno = {2},
+numpages = {10},
+location = {Chicago, IL, USA},
+series = {BeyondMR'17}
+}
+
+@article{petersohn2020towards,
+author = {Petersohn, Devin and Macke, Stephen and Xin, Doris and Ma, William and Lee, Doris and Mo, Xiangxi and Gonzalez, Joseph E. and Hellerstein, Joseph M. and Joseph, Anthony D. and Parameswaran, Aditya},
+title = {Towards scalable dataframe systems},
+year = {2020},
+issue_date = {August 2020},
+publisher = {VLDB Endowment},
+volume = {13},
+number = {12},
+issn = {2150-8097},
+doi = {10.14778/3407790.3407807},
+journal = {Proc. VLDB Endow.},
+month = jul,
+pages = {2033–2046},
+numpages = {14}
+}
+
+@article{barcelo2022expressiveness,
+  title={On the expressiveness of LARA: a proposal for unifying linear and relational algebra},
+  author={Barcel{\'o}, Pablo and Higuera, Nelson and P{\'e}rez, Jorge and Subercaseaux, Bernardo},
+  journal={Theoretical Computer Science},
+  volume={935},
+  pages={105--127},
+  year={2022},
+  publisher={Elsevier}
+}
