--- a/glossary.tex
+++ b/glossary.tex
@@ -25,6 +25,7 @@
 \newabbreviation{cnn}{CNN}{convolutional neural network}
 \newabbreviation{pca}{PCA}{principal component analysis}
 \newabbreviation{llm}{LLM}{large language model}
+\newabbreviation{eda}{EDA}{exploratory data analysis}
 
 \newglossaryentry{ontology}{%
   name=ontology,
