--- a/references.bib
+++ b/references.bib
@@ -687,6 +687,27 @@ author = {Freek Stulp and Olivier Sigaud},
   url = {https://github.com/hadley/nycflights13},
 }
 
+@book{Tukey1977,
+  title={Exploratory data analysis},
+  author={Tukey, John Wilder},
+  year={1977},
+  publisher={Pearson},
+  isbn={978-0201076165},
+  pages={712},
+}
+
+@article{Chatfield1986,
+  title = {Exploratory data analysis},
+  journal = {European Journal of Operational Research},
+  volume = {23},
+  number = {1},
+  pages = {5-13},
+  year = {1986},
+  issn = {0377-2217},
+  doi = {10.1016/0377-2217(86)90209-2},
+  author = {Chris Chatfield},
+}
+
 @online{Zhao2025,
   title =        {Is Chain-of-Thought Reasoning of LLMs a Mirage? A Data Distribution Lens},
   author =       {Zhao, Chengshuai and Tan, Zhen and Ma, Pingchuan and Li, Dawei and Jiang, Bohan and Wang, Yancheng and Yang, Yingzhen and Liu, Huan},
