--- a/slides/history.tex
+++ b/slides/history.tex
@@ -387,6 +387,16 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Tukey's exploratory data analysis (1977)}
+  \begin{itemize}
+    \item \textbf{John W. Tukey} (1915--2000)
+    \item Countered dominance of confirmatory statistical methods
+    \item Advocated informal study of data before formal modeling
+    \item Introduced box plot, stem-and-leaf display
+    \item Philosophy: data analysis should include open-ended exploration
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Empirical risk minimization (1960s--1980s)}
   \begin{itemize}
     \item \textbf{Vladimir Vapnik} (born 1936) and \textbf{Alexey Chervonenkis} (1938--2014)
